--- a/style.css
+++ b/style.css
@@ -31,3 +31,37 @@ canvas {
   height: auto;
   touch-action: none; /* para que en celular no haga scroll */
 }
+.controls {
+  margin-top: 25px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+}
+
+.controls button {
+  font-size: 28px;
+  padding: 15px 20px;
+  border-radius: 15px;
+  border: none;
+  background: rgba(0, 0, 0, 0.7);
+  color: white;
+  box-shadow: 0 0 10px black;
+}
+
+.controls button:active {
+  transform: scale(0.9);
+  background: limegreen;
+}
+
+/* En PC se ven más chicos */
+@media (min-width: 768px) {
+  .controls button {
+    font-size: 20px;
+    padding: 10px 15px;
+  }
+}
+canvas {
+  display: block;
+  margin: 40px auto; /* separa arriba y abajo */
+}
