--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+html,
+body {
+  margin: 0;
+  padding: 0;
+  overflow: hidden; /* 🔥 ADIÓS SCROLL */
+  height: 100%;
+}
+
 body {
   margin: 0;
   text-align: center;
@@ -64,4 +72,19 @@ canvas {
 canvas {
   display: block;
   margin: 40px auto; /* separa arriba y abajo */
+}
+#restartBtn {
+  position: fixed;
+  left: 50%;
+  top: 55%;
+  transform: translate(-50%, -50%);
+  padding: 12px 25px;
+  font-size: 18px;
+  border-radius: 12px;
+  border: none;
+  background: limegreen;
+  color: black;
+  box-shadow: 0 0 15px black;
+  display: none;
+  margin: 40 auto;
 }
